Update event date properties to use date format in API documentation
