# chronolink-backend/app/Http/Controllers/EventController.php
@@ -68,8 +68,8 @@ class EventController extends Controller
      *          @OA\Property(property="title", type="string", example="Event title"),
      *          @OA\Property(property="description", type="string", example="Event description"),
      *          @OA\Property(property="location", type="string", example="Event location"),
-     *          @OA\Property(property="start_date", type="datetime", example="2021-08-01 00:00:00"),
-     *          @OA\Property(property="end_date", type="datetime", example="2021-08-01 23:59:59"),
+     *          @OA\Property(property="start_date", type="date", example="2021-08-01"),
+     *          @OA\Property(property="end_date", type="date", example="2021-08-02"),
      *          @OA\Property(property="timeline_id", type="integer", example=1),
      *          @OA\Property(property="label_id", type="integer", example=1),
      *    ),
@@ -119,8 +119,8 @@ class EventController extends Controller
      *          @OA\Property(property="title", type="string", example="Event title"),
      *          @OA\Property(property="description", type="string", example="Event description"),
      *          @OA\Property(property="location", type="string", example="Event location"),
-     *          @OA\Property(property="start_date", type="datetime", example="2021-08-01 00:00:00"),
-     *          @OA\Property(property="end_date", type="datetime", example="2021-08-01 23:59:59"),
+     *          @OA\Property(property="start_date", type="date", example="2021-08-01"),
+     *          @OA\Property(property="end_date", type="date", example="2021-08-02"),
      *          @OA\Property(property="timeline_id", type="integer", example=1),
      *          @OA\Property(property="label_id", type="integer", example=1),
      *    ),
