# chronolink-backend/storage/api-docs/api-docs.json
@@ -255,13 +255,13 @@
                                     },
                                     "start_date": {
                                         "type": "string",
-                                        "format": "date-time",
-                                        "example": "2021-08-01 00:00:00"
+                                        "format": "date",
+                                        "example": "2021-08-01"
                                     },
                                     "end_date": {
                                         "type": "string",
-                                        "format": "date-time",
-                                        "example": "2021-08-01 23:59:59"
+                                        "format": "date",
+                                        "example": "2021-08-02"
                                     },
                                     "timeline_id": {
                                         "type": "integer",
@@ -351,13 +351,13 @@
                                     },
                                     "start_date": {
                                         "type": "string",
-                                        "format": "date-time",
-                                        "example": "2021-08-01 00:00:00"
+                                        "format": "date",
+                                        "example": "2021-08-01"
                                     },
                                     "end_date": {
                                         "type": "string",
-                                        "format": "date-time",
-                                        "example": "2021-08-01 23:59:59"
+                                        "format": "date",
+                                        "example": "2021-08-02"
                                     },
                                     "timeline_id": {
                                         "type": "integer",
